--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Gramantin # The title of the blog
 author: Ekrem Karaca # Your name 
 email: your-email@domain.com # your email shown in the footer
-url: http://gramantin.github.io # this is your site's root address.
+url: https://gramantin.netlify.com # this is your site's root address.
 description: > # this means to ignore newlines until "show_excerpts:"
   A clean and minimalist theme for Jekyll.
 favicon: "./favicon.ico" # set the favicon of the site 
